fix readability of time slot in main page

--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -178,7 +178,7 @@ body::-webkit-scrollbar {
 
 }
 
-.MuiListItemText-primary{
+.MuiListItemText-primary, .makeStyles-time-37, .makeStyles-time-90{
     color: white !important;
 }
 
